<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity"
    android:background="@color/lighty_gray">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:fontFamily="@font/sourcesansprobold"
        android:gravity="center"
        android:text="@string/cadastro"
        android:textSize="26sp"
        android:textColor="@color/roxo"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textEmail"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textSenha"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/senha"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:background="@color/roxo"
        android:textColor="@color/white"/>

</RelativeLayout>